@@ -3,6 +3,7 @@ package http
 import (
 	"github.com/elastic/beats/packetbeat/config"
 	"github.com/elastic/beats/packetbeat/protos"
+	"github.com/elastic/beats/packetbeat/protos/tcp"
 )
 
 type httpConfig struct {
@@ -14,6 +15,7 @@ type httpConfig struct {
 	Include_body_for      []string `config:"include_body_for"`
 	Hide_keywords         []string `config:"hide_keywords"`
 	Redact_authorization  bool     `config:"redact_authorization"`
+	MaxMessageSize        int      `config:"max_message_size"`
 }
 
 var (
@@ -21,5 +23,6 @@ var (
 		ProtocolCommon: config.ProtocolCommon{
 			TransactionTimeout: protos.DefaultTransactionExpiration,
 		},
+		MaxMessageSize: tcp.TCP_MAX_DATA_IN_STREAM,
 	}
 )
