@@ -90,3 +90,25 @@ class Test(BaseTest):
 
         assert "request" not in o
         assert "response" not in o
+
+    def test_large_body(self):
+        """
+        Checks that the transaction is still created if the
+        message is larger than the max_message_size.
+        """
+        self.render_config_template(
+            http_include_body_for=["binary"],
+            http_ports=[8000],
+            http_max_message_size=1024
+        )
+        self.run_packetbeat(pcap="http_get_2k_file.pcap",
+                            debug_selectors=["*"])
+        objs = self.read_output()
+
+        assert len(objs) == 1
+        o = objs[0]
+        print len(o["http.response.body"])
+
+        # response body should be included but trimmed
+        assert len(o["http.response.body"]) < 2000
+        assert len(o["http.response.body"]) > 500
